<resources>
    <!--string name="app_name">CaseAnalyst</string-->
    <string name="app_name">真相</string>
    <string name="head_name">Git pushed!</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_case_list">CaseList</string>
    <string name="title_activity_value_setter">Value Setter</string>

    <string name="save">保存</string>

    <!--案件属性 case value setter -->
    <string name="case_name">案件名称</string>
    <string name="case_info">案件信息</string>


    <!--人属性 person value setter-->
    <string name="person_name">人名</string>
    <string name="person_info">人物信息</string>
    <string name="person_nick_name">昵称</string>
    <string name="person_age">年龄</string>
    <string name="person_gender">性别</string>
    <string name="person_blood_type">血型</string>
    <string name="person_is_suspect">是否是嫌犯</string>

    <!--组织属性 org value setter-->
    <string name="org_name">组织名称</string>
    <string name="org_info">组织信息</string>

    <!--事件属性 -->
    <string name="event_name">事件名称</string>
    <string name="event_info">事件信息</string>

    <!--证物属性 -->
    <string name="evidence_name">证物名称</string>
    <string name="evidence_info">证物信息</string>
    <string name="evidence_count">证物数量</string>

    <string name="name">名称</string>
    <string name="info">信息</string>

    <string name="person_list_enter">查看相关人士</string>
    <string name="org_list_enter">查看相关组织</string>
    <string name="event_list_enter">查看事件</string>
    <string name="evidence_list_enter">查看证物</string>

    <string name="set_new_item">设置关联对象</string>

    <string name="key">关键字</string>

    <string name="relationship_info">关系信息</string>
    <string name="item">元素</string>

    <string name="man_man_relationship">人际关系</string>
    <string name="man_org_relationship">人-组织 关系</string>
    <string name="org_org_relationship">组织间关系</string>

    <string name="man_thing_relationship">人-物 关系</string>
    <string name="man_event_relationship">人-事 关系</string>
    <string name="org_thing_relationship">组织-物 关系</string>
    <string name="org_event_relationship">组织-事 关系</string>

    <string name="time_axis_enter">时间线入口</string>


    <string name="create_new_example">生成示例</string>

    <string name="person_graph_enter">查看人物关系图</string>
    <string name="show_time_axis">查看时间线</string>

    <string name="is_short_time_case">是否为短期案件</string>

    <string name="create_time">产生日期</string>

    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="action">行为</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="person">人物</string>
    <string name="organization">组织</string>
    <string name="event">事件</string>
    <string name="evidence">证据</string>


    <string name="test">test</string>
    <string name="to_old_ui">换回旧界面</string>
    <string name="to_new_ui">使用新界面</string>

    <string name="t_name">T name</string>
    <string name="e_name">E name</string>

    <string name="no_relationship">没有关系</string>
    <string name="same_pserson">同一个人</string>


    <string name="title_activity_d_b_network_settings">DBNetworkSettingsActivity</string>

    <string name="neo4j_setting_header">Neo4j 数据库设置</string>
    <string name="neo4j_setting_domain">域名/ip</string>
    <string name="neo4j_setting_port">端口</string>
    <string name="neo4j_setting_username">用户名</string>
    <string name="neo4j_setting_password">密码</string>

</resources>
