<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/neo4j_setting_header">

        <EditTextPreference
            app:key="domain"
            app:title="@string/neo4j_setting_domain"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="port"
            app:title="@string/neo4j_setting_port"
            app:defaultValue="7687"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="username"
            app:title="@string/neo4j_setting_username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="password"
            app:title="@string/neo4j_setting_password"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


</PreferenceScreen>