<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/case_value_setter_view">

    <LinearLayout
        android:id="@+id/case_value_setter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/case_name_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/case_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/case_info_inputer"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:hint="@string/case_info"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/person_list_enter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/person_list_enter" />

        <TextView
            android:id="@+id/org_list_enter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/org_list_enter" />

        <TextView
            android:id="@+id/event_list_enter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/event_list_enter" />

        <TextView
            android:id="@+id/evidence_list_enter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/evidence_list_enter" />

        <Button
            android:id="@+id/case_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
