<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/event_value_setter_view">

    <LinearLayout
        android:id="@+id/event_value_setter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/event_name_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/event_info_inputer"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:hint="@string/event_info"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/man_event_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/man_event_relationship" />


        <TextView
            android:id="@+id/org_event_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/org_event_relationship" />

        <TextView
            android:id="@+id/time_axis_enter"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/time_axis_enter" />

        <Button
            android:id="@+id/event_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
