<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/person_value_setter_view">

    <LinearLayout
        android:id="@+id/person_value_setter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_name_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_info_inputer"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:hint="@string/person_info"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_nick_name_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_nick_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_age_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_age"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/gender_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender" />

        <Spinner
            android:id="@+id/blood_type_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/blood_type" />

        <Spinner
            android:id="@+id/suspect_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Boolean" />


        <TextView
            android:id="@+id/man_man_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/man_man_relationship" />

        <TextView
            android:id="@+id/man_org_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/man_org_relationship" />

        <TextView
            android:id="@+id/man_thing_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/man_thing_relationship" />

        <TextView
            android:id="@+id/man_event_relationship_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/man_event_relationship" />

        <Button
            android:id="@+id/person_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
