<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relationship_value_setter_view">

    <LinearLayout
        android:id="@+id/relationship_value_setter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/item_t_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/item" />

        <TextView
            android:id="@+id/item_e_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="58sp"
            android:textSize="36sp"
            android:text="@string/item" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/relationship_key_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/key"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/relationship_info_inputer"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:hint="@string/relationship_info"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/relationship_save_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>